--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<div id="card-inside">
 			<div class="wrap">
 				<center><p class="animated infinite wobble"><b><u>Happy Birthday!</b></u></p><center>
-				<p> Happy Birthday!! 🥳🎂 I really hope today brings you nothing but smiles and warmth. No matter how much time passes, you still cross my mind every now and then, and it always reminds me of the little things that made you you ✨. You’ve got this way of leaving memories that don’t fade easily, and I genuinely wish your day is as special as the person you are 💫.<i class="em-svg em-blush"></i></p>
+				<p> It feels a little strange wishing you this way, but I couldn’t miss your special day 🎂✨. Honestly, you’ve always been someone I admire a lot — the way you are, the little things about you, they still stay with me 💭. You remind me of so many moments that make me smile without even trying 😊, and sometimes I still catch myself thinking about them. It’s crazy how even the smallest memories with you feel so precious 🌸..<i class="em-svg em-blush"></i></p>
 
-				<p>It honestly makes me happy just knowing you’re out there, and I hope life always gives you reasons to laugh a little louder 😄, feel a little lighter 🌸, and stay surrounded by the kind of people and moments that make your heart full 🫶. Even if we don’t talk often, you’ll always be someone I remember with nothing but good wishes 🌈. Happiest birthday once again 🥳❤️.</p>
+				<p>On your birthday, I just want you to be happy in every small way 💕. You deserve to smile, to feel loved, and to enjoy the day as much as you can 🥰. I hope you get every bit of joy you once gave me and more 🌟, because you truly deserve it. No matter where life takes us, you’ll always have a special place with me 💌. Happy Birthday 🥳🎂✨.</p>
 				
 				<p>Be happy, keep laughing</p>	
 
